base/database-service.yaml
# Challenge
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    kubevirt.io/domain: database
  type: ClusterIP
